@@ -19,7 +19,6 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.release>21</maven.compiler.release>
-        <maven.compiler.args>--enable-preview</maven.compiler.args>
     </properties>
 
     <modules>
